--- a/style.css
+++ b/style.css
@@ -95,3 +95,13 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.form {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.score {
+  margin-left: 200px;
+}
